--- a/chains.html
+++ b/chains.html
@@ -1,11 +1,20 @@
 <!doctype html>
 <html>
-    <script src="d3/d3.min.js" type="text/JavaScript"></script>
+    <script src="../d3/d3.min.js" type="text/JavaScript"></script>
 <body>
     <svg>
     </svg>
     <script>
-        d3.csv(
+        d3.csv('Data/bw.citi.csv', function(data) {dataViz(data)})
+        function dataViz(data) {
+            var citybin = d3.nest()
+                .key(function(d) {return d.car})
+                .entries(data)
+
+                console.log(citybin)
+        }
+    </script>
+            
 </body>
 </html>
 
