--- a/chains.html
+++ b/chains.html
@@ -1,11 +1,54 @@
 <!doctype html>
-<html>
-    <script src="../d3/d3.min.js" type="text/JavaScript"></script>
+<meta charset="utf-8">
+<style>
+    body {
+        font: 10px sans-serif;
+    }
+
+    .axis path,
+    .axis line {
+        fill: none;
+        stroke: #000;
+        shape-rendering: crispEdges;
+    }
+
+    .bar {
+        fill: steelblue;
+    }
+
+    .x.axis path {
+        display: none;
+    }
+
+</style>
+<script src="../d3/d3.min.js" type="text/JavaScript"></script>
 <body>
     <svg>
     </svg>
     <script>
-        d3.csv('Data/bw.citi.csv', function(data) {dataViz(data)})
+        var margin = {top:30, right:20, bottom:30, left:40},
+        width = 800 - margin.left - margin.right,
+        height = 600 - margin.top - margin.bottom;
+
+        var x0 = d3.scale.ordinal().rangeRoundBands([0, width], .1);
+        var x1 = d3.scale.ordinal();
+        var y = d3.scale.linear().range([height, 0])
+
+        var color = d3.scale.ordinal().range(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00"]);
+        var xAxis = d3.svg.axis()
+        .scale(x0)
+        .orient('bottom');
+        var yAxis = d3.svg.axis()
+        .scale(y)
+        .orient('left')
+        .tickFormat(d3.format(".2s"));
+
+        var svg = d3.select("body").append("svg")
+        .attr('width', width + margin.left + margin.right)
+        .attr('height', height + margin.top + margin.bottom)
+        .append('g')
+        .attr('transform', 'translate(' + margin.left + ',' + margin.top + ')')
+        d3.csv('Data/bw.citi.csv', function(error, data) {if (error) throw error;dataViz(data)})
         function dataViz(data) {
             var citybin = d3.nest()
                 .key(function(d) {return d.car})
