--- a/dodgebar.html
+++ b/dodgebar.html
@@ -56,23 +56,60 @@ display: none;
     .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-    d3.csv("Data/data.csv", function(error, data) {
+    //d3.csv("Data/data.csv", function(error, data) {
+    d3.csv("Data/bw.gender.csv", function(error, data) {
         if (error) throw error;
+        newData = d3.nest()
+        .key(function(d) {return d.car})
+        .entries(data)
+        console.log(newData)
 
-        var ageNames = d3.keys(data[0]).filter(function(key) { return key !== "State"; });
 
-        data.forEach(function(d) {
-            d.ages = ageNames.map(function(name) { return {name: name, value: +d[name]}; });
-            //console.log(ageNames.map(function(name) {return {name:name, value:d[name]}}))
-        });
+        // data[0] is x.lab
+        //var ageNames = d3.keys(data[0]).filter(function(key) { return key !== "State"; });
+        var argNames = newData.map(function(d) {return d.key;})
+        //console.log(argNames)
+        function splitarray(ml) {
+            var tmpvar = []
+            ml.forEach(function(d) {
+                //d.ages = ageNames.map(function(name) { return {name: name, value: +d[name]}; });
+                //console.log(ageNames.map(function(name) {return {name:name, value:d[name]}}))
+                //console.log(d.values.map(function(d) {return d.type1}))
+                d.types = d.values.map(function(el) {
+                    if (el.type2 == 'total') {
+                        console.log(el.type1)
+                        //tmpvar.push({name:el.type1, value:el.vol})
+                        return {name:el.type1, value:el.vol}
+                    }
+                }).filter(function(el) {return el})
+                console.log(d)
+            });
+        }
+
+//        ml.forEach(function(d) {
+//            //d.ages = ageNames.map(function(name) { return {name: name, value: +d[name]}; });
+//            //console.log(ageNames.map(function(name) {return {name:name, value:d[name]}}))
+//            //console.log(d.values.map(function(d) {return d.type1}))
+//            d.types = d.values.map(function(el) {
+//                if (el.type2 == 'total') {
+//                    console.log(el.type1)
+//                    return {name:el.type1, value:el.vol}
+//                }
+//            }).filter(function(el) {return el})
+//            console.log(d)
+//        });
+        return 0
+        console.log(JSON.stringify(data))
 
         x0.domain(data.map(function(d) { return d.State; }));
-        console.log(x0.rangeBand())
         x1.domain(ageNames).rangeRoundBands([0, x0.rangeBand()]);
+        //rangeBand return every 'g' width of x0
+        //console.log(x0.rangeBand())
         y.domain([0, d3.max(data, function(d) { return d3.max(d.ages, function(d) { return d.value; }); })]);
 
         svg.append("g")
             .attr("class", "x axis")
+            // (0, height) is position of x axis
             .attr("transform", "translate(0," + height + ")")
             .call(xAxis);
 
@@ -80,27 +117,31 @@ display: none;
             .attr("class", "y axis")
             .call(yAxis)
             .append("text")
+            // rotate text
             .attr("transform", "rotate(-90)")
-            .attr("y", 6)
+            .attr("y", 9)
             .attr("dy", ".71em")
             .style("text-anchor", "end")
             .text("Population");
 
-        var state = svg.selectAll(".state")
+            console.log(ageNames.slice())
+            state = svg.selectAll(".state")
             .data(data)
             .enter().append("g")
             .attr("class", "g")
+            // transform the coordinate of every bar chart (x, 0)
             .attr("transform", function(d) { return "translate(" + x0(d.State) + ",0)"; });
 
         state.selectAll("rect")
-            .data(function(d) { return d.ages; })
+            .data(function(d) {return d.ages; })
             .enter().append("rect")
             .attr("width", x1.rangeBand())
             .attr("x", function(d) { return x1(d.name); })
             .attr("y", function(d) { return y(d.value); })
             .attr("height", function(d) { return height - y(d.value); })
             .style("fill", function(d) { return color(d.name); });
-
+        // PaT to slice method, js array is like array slice [start:end] in python
+        // console.log(ageNames.slice(1,5))
         var legend = svg.selectAll(".legend")
             .data(ageNames.slice().reverse())
             .enter().append("g")
