--- a/dodgebar.html
+++ b/dodgebar.html
@@ -62,27 +62,26 @@ display: none;
         newData = d3.nest()
         .key(function(d) {return d.car})
         .entries(data)
-        console.log(newData)
 
 
         // data[0] is x.lab
         //var ageNames = d3.keys(data[0]).filter(function(key) { return key !== "State"; });
-        var argNames = newData.map(function(d) {return d.key;})
-        //console.log(argNames)
+        //var argNames = newData.map(function(d) {return d.key;})
+        // argNames should be male and female
+        var argNames = newData.map(function(d) {d.types.map(function(v) {return v.name})})
+        console.log(argNames)
+        splitarray(newData)
         function splitarray(ml) {
-            var tmpvar = []
             ml.forEach(function(d) {
                 //d.ages = ageNames.map(function(name) { return {name: name, value: +d[name]}; });
                 //console.log(ageNames.map(function(name) {return {name:name, value:d[name]}}))
                 //console.log(d.values.map(function(d) {return d.type1}))
                 d.types = d.values.map(function(el) {
                     if (el.type2 == 'total') {
-                        console.log(el.type1)
                         //tmpvar.push({name:el.type1, value:el.vol})
                         return {name:el.type1, value:el.vol}
                     }
                 }).filter(function(el) {return el})
-                console.log(d)
             });
         }
 
@@ -98,14 +97,15 @@ display: none;
 //            }).filter(function(el) {return el})
 //            console.log(d)
 //        });
-        return 0
-        console.log(JSON.stringify(data))
+        //return 0
+        //console.log(JSON.stringify(newData))
 
-        x0.domain(data.map(function(d) { return d.State; }));
-        x1.domain(ageNames).rangeRoundBands([0, x0.rangeBand()]);
+        x0.domain(newData.map(function(d) {return d.key; }));
+        x1.domain(argNames).rangeRoundBands([0, x0.rangeBand()]);
         //rangeBand return every 'g' width of x0
         //console.log(x0.rangeBand())
-        y.domain([0, d3.max(data, function(d) { return d3.max(d.ages, function(d) { return d.value; }); })]);
+        y.domain([0, d3.max(newData, function(d) {return d3.max(d.types.map(function(v) {return parseFloat(v.value)}))})])
+        //y.domain([0, d3.max(data, function(d) { return d3.max(d.ages, function(d) { return d.value; }); })]);
 
         svg.append("g")
             .attr("class", "x axis")
@@ -122,18 +122,18 @@ display: none;
             .attr("y", 9)
             .attr("dy", ".71em")
             .style("text-anchor", "end")
-            .text("Population");
+            .text("用户数量");
 
-            console.log(ageNames.slice())
+            //console.log(argNames.slice())
             state = svg.selectAll(".state")
-            .data(data)
+            .data(newData)
             .enter().append("g")
             .attr("class", "g")
             // transform the coordinate of every bar chart (x, 0)
-            .attr("transform", function(d) { return "translate(" + x0(d.State) + ",0)"; });
+            .attr("transform", function(d) { console.log(x0(d.key) + ':' + d.key);return "translate(" + x0(d.key) + ",0)"; });
 
         state.selectAll("rect")
-            .data(function(d) {return d.ages; })
+            .data(function(d) {return d.types; })
             .enter().append("rect")
             .attr("width", x1.rangeBand())
             .attr("x", function(d) { return x1(d.name); })
@@ -142,6 +142,8 @@ display: none;
             .style("fill", function(d) { return color(d.name); });
         // PaT to slice method, js array is like array slice [start:end] in python
         // console.log(ageNames.slice(1,5))
+        return 0
+        
         var legend = svg.selectAll(".legend")
             .data(ageNames.slice().reverse())
             .enter().append("g")
